--- a/template/foodCategories.html
+++ b/template/foodCategories.html
@@ -1,51 +1,44 @@
 <optgroup label="Főételek">
-  <option value="leves">Leves</option>
-  <option value="előétel">Előétel</option>
-  <option value="főétel">Főétel</option>
-  <option value="köret">Köret</option>
-  <option value="tészta">Tészta</option>
-  <option value="rakott étel">Rakott étel</option>
-  <option value="grill">Grill étel</option>
-  <option value="vegetáriánus">Vegetáriánus étel</option>
-  <option value="vegán">Vegán étel</option>
-  <option value="halétel">Halétel</option>
-  <option value="húsétel">Húsétel</option>
-  <option value="street food">Street food</option>
+  <option value="Leves">Leves</option>
+  <option value="Előétel">Előétel</option>
+  <option value="Főétel">Főétel</option>
+  <option value="Köret">Köret</option>
+  <option value="Tészta">Tészta</option>
+  <option value="Rakott étel">Rakott</option>
+  <option value="Grill">Grill étel</option>
+  <option value="Vegetáriánus">Vegetáriánus</option>
+  <option value="Vegán">Vegán</option>
+  <option value="Halétel">Halétel</option>
+  <option value="Húsétel">Húsétel</option>
+  <option value="Street food">Street food</option>
 </optgroup>
 <optgroup label="Édesség">
-  <option value="sütemény">Sütemény</option>
-  <option value="torta">Torta</option>
-  <option value="pohár desszert">Pohárdesszert</option>
-  <option value="keksz">Keksz</option>
-  <option value="palacsinta & gofri">Palacsinta és gofri</option>
-  <option value="pite">Pite</option>
-  <option value="fagyi & jégkrém">Fagyi és jégkrém</option>
-  <option value="sütés nélküli édesség">Édesség sütés nélkül</option>
-  <option value="diétás édesség">Diétás édesség</option>
+  <option value="Édesség">Édesség</option>
+  <option value="Sütemény">Sütemény</option>
+  <option value="Torta">Torta</option>
+  <option value="Pite">Pite</option>
+  <option value="Édesség sütés nélkül">Édesség sütés nélkül</option>
+  <option value="Diétás édesség">Diétás édesség</option>
 </optgroup>
 <optgroup label="Speciális">
-  <option value="gyors">Gyors étel (30 perc alatt)</option>
-  <option value="egészséges">Egészséges recept</option>
-  <option value="alacsony kalória">Alacsony kalóriás étel</option>
-  <option value="gluténmentes">Gluténmentes étel</option>
-  <option value="laktózmentes">Laktózmentes étel</option>
-  <option value="ünnepi">Ünnepi étel</option>
-  <option value="nemzetközi">Nemzetközi konyha</option>
+  <option value="Egészséges">Egészséges</option>
+  <option value="Alacsony kalória">Alacsony kalória</option>
+  <option value="Gluténmentes">Gluténmentes</option>
+  <option value="Laktózmentes">Laktózmentes</option>
+  <option value="Ünnepi étel">Ünnepi étel</option>
+  <option value="Nemzetközi konyha">Nemzetközi konyha</option>
 </optgroup>
 <optgroup label="Italok">
   <option value="Smoothie">Smoothie</option>
-  <option value="koktél">Koktél</option>
-  <option value="alkoholmentes">Alkoholmentes ital</option>
-  <option value="forró ital">Forró ital</option>
+  <option value="Koktél">Koktél</option>
+  <option value="Alkoholmentes">Alkoholmentes</option>
+  <option value="Forró ital">Forró ital</option>
 </optgroup>
 <optgroup label="Egyéb">
-  <option value="befőtt">Befőttek és savanyúság</option>
-  <option value="szósz">Szószok és mártás</option>
-  <option value="kenyér">Kenyerek és péksütemény</option>
-  <option value="szendvics">Szendvics</option>
-  <option value="saláta">Saláta</option>
-  <option value="gyermekbarát">Gyermekbarát recept</option>
-  <option value="piknik">Piknik étel</option>
+  <option value="Befőtt és savanyúság">Befőtt és savanyúság</option>
+  <option value="Szósz és mártás">Szósz és mártás</option>
+  <option value="Kenyér és péksütemény">Kenyér és péksütemény</option>
+  <option value="Saláta">Saláta</option>
 <optgroup label="">
   <option value="egyéb">Egyéb étel</option>
 </optgroup>
