--- a/template/receptek.html
+++ b/template/receptek.html
@@ -24,10 +24,10 @@
                             <span class="remove-filter d-none" id="remove-time" onclick="removeFilter('time')">X</span>
                             <select class="form-select szuro-item" id="time" name="time">
                                 <option value="%!TIME!%" selected>%!TIME!%</option>
-                                <option value="30>">30 perc alatti</option>
-                                <option value="30-60">30-60 perces</option>
-                                <option value="60-90">60-90 perces</option>
-                                <option value="90<">90 perc feletti</option>
+                                <option value="30 perc alatti">30 perc alatti</option>
+                                <option value="30-60 perces">30-60 perces</option>
+                                <option value="60-90 perces">60-90 perces</option>
+                                <option value="90 perc feletti">90 perc feletti</option>
                             </select>
                         </div>
                         <div class="form-group mt-3 d-block">
@@ -38,7 +38,7 @@
                                 <option value="Kezdő">Kezdő</option>
                                 <option value="Könnyű">Könnyű</option>
                                 <option value="Közepes">Közepes</option>
-                                <option value="Nehéz">Nehéz</option>
+                                <option value="Haladó">Haladó</option>
                                 <option value="Profi">Profi</option>
                             </select>
                         </div>
