--- a/template/mainSearch.html
+++ b/template/mainSearch.html
@@ -1,9 +1,10 @@
 <div class="py-5" id="main-search" style="background-image: url(%!IMG!%);">
-    <form method="post" class="pt-5">
+    <form method="post" class="pt-5" id="text-search-form">
         <h2 id="welcome-text" class="text-center">%!WELCOME!%</h2>
         <div class="container" style="max-width: 800px;">
             <div class="row">
-                <div class="col-sm-10">
+                <div class="col-sm-10 d-block">
+                    <span id="remove-search" onclick="removeSearchBar()">X</span>
                     <input class="form-control" name="query" placeholder="%!PLACEHOLDER!%" id="search" value="%!VALUE!%">
                 </div>
                 <div class="col-sm-2">
@@ -15,3 +16,32 @@
         <p class="text-center mt-2"><span id="recept-num">%!RESULT!%</p>
     </form>
 </div>
+
+
+<script>
+let RemoveSearchElement = document.getElementById("remove-search");
+let SearchInputElement = document.getElementById("search");
+let SearchForm = document.getElementById("text-search-form");
+
+function removeSearchBar() {
+    SearchInputElement.value = "";
+    SearchInputElement.dispatchEvent(new Event("input")); // Manually trigger input event to update UI
+    SearchInputElement.setAttribute("placeholder", "Keresés...");
+    RemoveSearchElement.classList.add("d-none");
+}
+
+function checkInputBox() {
+    if (SearchInputElement.value.trim() === "") {
+        RemoveSearchElement.classList.add("d-none");
+    } else {
+        RemoveSearchElement.classList.remove("d-none");
+    }
+}
+
+SearchInputElement.addEventListener("input", checkInputBox);
+RemoveSearchElement.addEventListener("click", removeSearchBar);
+
+// Initial check
+checkInputBox();
+
+</script>
