--- a/template/navigation.html
+++ b/template/navigation.html
@@ -1,10 +1,40 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-<ul class="navbar-nav mr-auto">
-    <a class="navbar-brand" href="index.php"><img src="%!LOGO!%" alt="receptkönyv logó" id="logo"></a>
-    <a class="nav-item nav-link" href="index.php"><li>Főoldal</li></a>
-    <a class="nav-item nav-link" href="index.php?p=receptek"><li>Receptek</li></a>
-    <a class="nav-item nav-link" id="nav-categories" href="index.php?p=about"><li>Rólunk</li></a>
+    <ul class="navbar-nav mr-auto">
+        <li><a class="navbar-brand" href="index.php"><img src="%!LOGO!%" alt="receptkönyv logó" id="logo"></a></li>
+        <li>
+            <a class="nav-item nav-link" href="index.php">
+            Főoldal
+            </a>
+        </li>
+        <li>
+            <a class="nav-item nav-link" href="index.php?p=receptek">
+            Receptek
+            </a>
+        </li>
+
+        <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Kategóriák
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                <li><a class="dropdown-item" href="index.php?p=receptek&cat=Leves">Leves</a></li>
+                <li><a class="dropdown-item" href="index.php?p=receptek&cat=Előétel">Előétel</a></li>
+                <li><a class="dropdown-item" href="index.php?p=receptek&cat=Főétel">Főétel</a></li>
+                <li><a class="dropdown-item" href="index.php?p=receptek&cat=Köret">Köret</a></li>
+                <li><a class="dropdown-item" href="index.php?p=receptek&cat=Édesség">Édesség</a></li>
+                <li><a class="dropdown-item" href="index.php?p=receptek&cat=Vegán">Vegán</a></li>
+            </ul>
+        </li>
+        </ul>
+
+
+        <li>
+            <a class="nav-item nav-link" id="nav-categories" href="index.php?p=about">
+            Rólunk
+            </a>
+        </li>
         %!NAVITEMUPLOAD!%
         %!NAVITEMLOGIN!%
-</ul>
+    </ul>
 </nav>
