--- a/template/navItemRegister.html
+++ b/template/navItemRegister.html
@@ -1,4 +1,6 @@
-<a class="nav-item nav-link" style="position: absolute; right: 5px; color: var(--primary-color)"
-    href="index.php?p=login">
-    <li>Bejelentkezés</li>
-</a>
+<li>
+    <a class="nav-item nav-link" style="position: absolute; right: 5px; color: var(--primary-color)"
+        href="index.php?p=login">
+        Bejelentkezés
+    </a>
+</li>
