--- a/template/navItemUpload.html
+++ b/template/navItemUpload.html
@@ -1,3 +1,5 @@
-<a class="nav-item nav-link" href="index.php?p=recept-feltoltes" style="position: absolute; right: 120px;">
-    <li><button class="btn btn-default" id="nav-btn">Recept feltöltés</button></li>
-</a>
+<li>
+    <a class="nav-item nav-link" href="index.php?p=recept-feltoltes">
+        <button class="btn btn-default" id="nav-btn">Recept feltöltés</button>
+    </a>
+</li>
