--- a/template/navItemRegister.html
+++ b/template/navItemRegister.html
@@ -1,5 +1,5 @@
 <li>
-    <a class="nav-item nav-link" style="position: absolute; right: 5px; color: var(--primary-color)"
+    <a class="nav-item nav-link" style="color: var(--primary-color)"
         href="index.php?p=login">
         Bejelentkezés
     </a>
