--- a/template/receptek.html
+++ b/template/receptek.html
@@ -10,14 +10,7 @@
 
                 <div class="container">
                     <form method="post" id="szurok" name="szurok">
-                        <div class="form-group text-center d-block">
-                            <label for="category" class="form-label text-left">Kategória</label><br>
-                            <span class="remove-filter d-none" id="remove-category" onclick="removeFilter('category')">X</span>
-                            <select class="from-control w-100 szuro-item mt-2" name="category" id="category">
-                                <option value="%!CATEGORY!%" selected>%!CATEGORY!%</option>
-                                %!CATEGORIES!%
-                            </select>
-                        </div>
+                        %!CATEGORYFILTER!%
 
                         <div class="form-group mt-3 d-block">
                             <label for="time" class="form-label">Elkészítési idő</label>
