--- a/template/recept-feltoltes.html
+++ b/template/recept-feltoltes.html
@@ -20,7 +20,7 @@
             <div class="row p-4" style="background-color: rgb(234, 245, 250); border-radius: 10px;">
 
                 <div class="form-group text-center col-3">
-                    <label for="category" class="form-label text-left">Kategória</label><br>
+                    <label for="category" class="form-label">Kategória</label><br>
                     <select class="from-control w-100" name="category" id="category">
                         %!CATEGORIES!%
                     </select>
@@ -38,7 +38,7 @@
                         <option value="kezdő">Kezdő</option>
                         <option value="könnyű">Könnyű</option>
                         <option value="közepes" selected>Közepes</option>
-                        <option value="nehéz">Nehéz</option>
+                        <option value="haladó">Haladó</option>
                         <option value="profi">Profi</option>
                     </select>
                 </div>
