--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -1,4 +1,4 @@
-<div class=" col-lg-4 col-md-6 mb-5 ">
+<div class=" col-lg-4 col-sm-6 mb-5 ">
     <div class="card-deck shadow rounded" id="%!RECEPTID!%">
         <div class="card pb-4">
             <a href="%!RECEPTLINK!%">
