--- a/template/recept-feltoltes.html
+++ b/template/recept-feltoltes.html
@@ -19,20 +19,20 @@
         <div class="container mt-3">
             <div class="row p-4" style="background-color: rgb(234, 245, 250); border-radius: 10px;">
 
-                <div class="form-group text-center col-3">
+                <div class="form-group text-center col-sm-3">
                     <label for="category" class="form-label">Kategória</label><br>
                     <select class="from-control w-100" name="category" id="category">
                         %!CATEGORIES!%
                     </select>
                 </div>
 
-                <div class="form-group col-3">
+                <div class="form-group col-sm-3">
                     <label for="time" class="form-label">Elkészítési idő</label>
                     <input class="form-control" type="number" id="time" name="time" min="5" value="30" step="5">
                     <small class="form-text text-muted">perc</small>
                 </div>
 
-                <div class="form-grou col-3">
+                <div class="form-group col-sm-3">
                     <label for="nehezseg" class="form-label">Nehézség</label>
                     <select class="form-select" id="nehezseg" name="nehezseg">
                         <option value="kezdő">Kezdő</option>
@@ -43,7 +43,7 @@
                     </select>
                 </div>
 
-                <div class="form-group col-3">
+                <div class="form-group col-sm-3">
                     <label for="adag" class="form-label">Adag</label>
                     <input class="form-control" type="number" id="adag" name="adag" min="1" value="2">
                     <small class="form-text text-muted">fő</small>
