--- a/template/comment-thumbnail.html
+++ b/template/comment-thumbnail.html
@@ -11,7 +11,7 @@
                 <div class="com-del-block" style="display: %!DISP!%">
                     <form method="post">
                         <input type="hidden" name="comment_id" value="%!REVID!%">
-                        <input type="submit" name="delete" value="x" class="com-del-btn">
+                        <input type="submit" name="delete" value="x" class="com-del-btn" style="background-color: none !important;">
                     </form>
                 </div>
                 <small class="time-stamp">%!TIMESTAMP!%</small><br>
