--- a/template/recept-card.html
+++ b/template/recept-card.html
@@ -5,10 +5,10 @@
                 <div class="card-img-wrapper">
                     <img class="card-img-top"
                         src="%!RECEPTKEP!%"
-                        alt="recept kep">
+                        alt="%!RECEPTNEV!%">
                 </div>
             </a>
-            <div class="card-body mt-2">
+            <div class="card-body">
                 <div class="nev-wrapper"><h5 class="card-title"><a href="%!RECEPTLINK!%">%!RECEPTNEV!%</a></h5></div>
                 <ul class="card-list mt-1">
                     <li class="card-text">
@@ -21,11 +21,13 @@
                         <small class="text-muted">%!NEHEZSEG!%</small>
                     </li>
                 </ul>
-                <p class="card-text text-center mb-1"><small><span>%!USER!%</span> receptje</small></p>
-                <p class="card-text text-center mb-0 text-muted"><small>Értékelés <span>%!SCORE!%</span></small>
-                </p>
-                <div class="star text-center mb-1">
-                    <img class="star-image" src="%!STARSKEP!%" alt="stars">
+                <div class="text-center card-bottom-text">
+                    <p class="card-text mb-1"><small><span>%!USER!%</span></small></p>
+                    <p class="card-text mb-0 text-muted"><small>Értékelés <span>%!SCORE!%</span></small>
+                    </p>
+                    <div class="star mb-1">
+                        <img class="star-image" src="%!STARSKEP!%" alt="stars">
+                    </div>
                 </div>
             </div>
         </div>
