--- a/template/slider-recepie-card.html
+++ b/template/slider-recepie-card.html
@@ -5,8 +5,8 @@
         </a>
     </div>
     <div class="mt-2 text-center">
-        <h5 class="card-title">%!NEV!%</h5>
-        <ul class="card-list mt-4">
+        <div class="title-wrapper"><h5 class="card-title p-1">%!NEV!%</h5></div>
+        <ul class="card-list mt-1">
             <li class="card-text">
                 <small class="text-muted">%!IDO!% perc | </small>
             </li>
