--- a/template/user-recept-card.html
+++ b/template/user-recept-card.html
@@ -1,15 +1,15 @@
-<div class=" col-lg-4 col-sm-6 mb-5 ">
+<div class=" col-lg-4 col-sm-6 mb-5 user-card-deck">
     <div class="card-deck shadow rounded" id="%!RECEPTID!%">
-        <div class="card pb-4">
+        <div class="card">
             <a href="%!RECEPTLINK!%">
                 <div class="card-img-wrapper">
                     <img class="card-img-top"
                         src="%!RECEPTKEP!%"
-                        alt="recept kep">
+                        alt="%!RECEPTNEV!%">
                 </div>
             </a>
             <div class="card-body">
-                <h5 class="card-title"><a href="%!RECEPTLINK!%">%!RECEPTNEV!%</a></h5>
+                <div class="nev-wrapper"><h5 class="card-title"><a href="%!RECEPTLINK!%">%!RECEPTNEV!%</a></h5></div>
                 <ul class="card-list">
                     <li class="card-text">
                         <small class="text-muted"><span>%!IDO!%</span> perc | </small>
@@ -26,13 +26,14 @@
                 <div class="star text-center mb-1">
                     <img class="star-image" src="%!STARSKEP!%" alt="stars">
                 </div>
+                <div class="actions text-center mt-3">
+                    <form method="post">
+                    <a href="#" class="delete-recept" onclick="deleteRecepie(%!RECEPTID!%)">törlés</a>
+                    </form>
+                </div>
             </div>
     
-            <div class="actions text-center mt-2">
-                <form method="post">
-                <a href="#" class="delete-recept" onclick="deleteRecepie(%!RECEPTID!%)">törlés</a>
-                </form>
-            </div>
+            
         </div>
     </div>
 </div>
