--- a/template/account-page.html
+++ b/template/account-page.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-3 p-5 white rounded mt-3">
             <div class="profil-adatok">
-                <h3>Profiom</h3>
+                <h3>Profilom</h3>
                 <div class="text-center mt-4">
                     <img class="profil-pic" src="%!SRC!%" alt="profil kep">
                     <p class="my-3"><b>%!NAME!%</b></p>
