--- a/template/about.html
+++ b/template/about.html
@@ -6,7 +6,7 @@
 
     <h6 class="text-center" style="background-color: %!COLOR!%; padding: 5px; color: white;">%!RESULT!%</h6>
 
-    <div class="w-75 m-auto">
+    <div class="m-auto">
         <h2 class="primary-color mb-3">Amit rólunk érdemes tudni</h2>
         <p class="my-3" id="about-text">%!ABOUT!%</p>
     </div>
@@ -29,7 +29,7 @@
 
     <div class="devider"></div>
 
-    <div class="container w-75">
+    <div class="container" style="max-width: 600px;">
         <h1 class="primary-color mt-5 text-center">Kérdésed van?</h1>
         <h3 class="mt-1 text-center">írj nekünk!</h3>
     
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group my-3">
                 <label for="message">Üzenet</label>
-                <textarea class="form-control" id="message" name="message" placeholder="Szöveges üzenet..." cols="80" rows="20" required></textarea>
+                <textarea class="form-control" id="message" name="message" placeholder="Szöveges üzenet..." cols="80" rows="10" required></textarea>
             </div>
             <input type="submit" class="btn btn-default w-100 my-3" value="Küldés" name="ok">
         </form>
