--- a/template/star-recept-module.html
+++ b/template/star-recept-module.html
@@ -1,10 +1,10 @@
 <div class="star-recept">
     <div class="container mw-80">
         <div class="row white">
-            <div class="col-md-7 p-0">
-                <div class="wrap">
+            <div class="col-md-7 p-0 img-wrap">
+
                     <a href="%!LINK!%"><img src="%!RECEPTKEP!%" alt="recept képe" class="star-recept-kep"></a>
-                </div>
+              
             </div>
             <div class="col-md-5 white star-flex">
                 <h2 class="text-center my-5">%!NEV!%</h2>
